assets/css/style.css
@import url(http://fonts.googleapis.com/css?family=Ubuntu:500&subset=latin,latin-ext);

body{
	/* color: #2c3e50; */
	color: #DBF1AE;
	background: #333333; !important
}

btn {
	/* color: #2B4F3E; */
	color: #333333;
	font-weight: bold;
}

.sidebar {
	position: fixed;
	top: 0px;
	padding-top: 10%;
	/* background-color: #2c3e50; */
	/* color: #fff; */
	background-color: #89CD4E;
	color: #2B4F3E;
}

.sidebar-header {
	text-align: center;
	margin-bottom: 10px;
}
.sidebar-header .title{
	letter-spacing: 3px;
	text-transform: uppercase;
}

.sidebar-header .title a{
	text-decoration: none;
	color: #fff;
}

a.nav-link {
	padding-bottom: 5px;
	padding-top: 7px;
	color: #aaa;
}
a.nav-link i{
	font-size: 16px;
}
a.nav-link:hover { color: #777 }

#bio {
	font-family: "Courier New", Courier, monospace;
	font-size: 11px;
	margin: 0 auto;
	margin-bottom: 10px;
}

#contact-list li .fa,
article .share .btn {
	-o-transition:color .2s ease-out, background 1s ease-in;
  -ms-transition:color .2s ease-out, background 1s ease-in;
  -moz-transition:color .2s ease-out, background 1s ease-in;
  -webkit-transition:color .2s ease-out, background 1s ease-in;
  transition:color .2s ease-out, background 1s ease-in;
}
#contact-list li:hover .fa-twitter,
article .share .twitter:hover {
	color: #00ACEE;
	border-color: #00ACEE;
}
#contact-list li:hover .fa-linkedin {
	color: #1D87BD;
}
#contact-list li:hover .fa-envelope {
	color: #E93E30;
}
#contact-list li:hover .fa-pinterest {
	color: #CC2127;
}
#contact-list li:hover .fa-rss {
	/* color: #e74c3c; */
	color: #89CD4E;
}
article .share .facebook:hover {
	color: #43609C;
	border-color: #43609C;
}
article .share .gplus:hover {
	color: #C13929;
	border-color: #C13929;
}

#contact-list-secondary {
	padding-bottom: 10px;
}

.page-header {
	/* color: #e74c3c; */
	color: #89CD4E;
	text-shadow: 1px 1px 1px rgba(150, 150, 150, 1);
}

article{
	margin-bottom: 40px;
}

.article_body{
	margin-top: 20px;
	margin-bottom: 20px;
}

.post-date {
	text-transform: uppercase;
	font-size: 14px;
	letter-spacing: 3px;
}

article {
	padding: 0 5% 0;
}
/* article.home div a, article.home pre a { color: #2c3e50; } */
/* article.home div a:hover, article.home pre a:hover { color: #2c3e50; text-decoration: none; } */
article.home div a, article.home pre a { color: #89CD4E; }
article.home div a:hover, article.home pre a:hover { color: #89CD4E; text-decoration: none; }
article img { max-width: 100%; }

h1,h2,h3,h4,h5,h6 { font-family: 'Ubuntu', sans-serif; }
article.home h1,
article.home h2,
article.home h3,
article.home h4,
article.home h5,
article.home h6 {
	font-family: 'Ubuntu', sans-serif;
	/* color: #f2756a; */
	color: #ffffff;
}

article.home h1 a,
article.home h2 a,
article.home h3 a,
article.home h4 a {
	/* color: #f2756a; */
	color: #ffffff;
}
article.home h1 a:hover,
article.home h2 a:hover,
article.home h3 a:hover,
article.home h4 a:hover {
	/* color: #e74c3c; */
	color: #89CD4E;
}

.author .author-image {
  float: left;
  margin-right: 20px;
}

footer {
	padding-top: 15px;
	font-family: 'Ubuntu';
}

/* nav-vertical-tabs component */
.nav-tabs-vertical {
    border-right: 1px solid #ddd;
}

.nav-tabs-vertical li {
    margin-right: -1px;
}

.nav-tabs-vertical>li.active>a, .nav-tabs-vertical>li.active>a:hover, .nav-tabs-vertical>li.active>a:focus {
    /* color: #555; */
	color: #2B4F3E;
    cursor: default;
    /* background-color: #fff; */
	background-color: #DBF1AE;
    border: 1px solid #ddd;
    border-right-color: transparent;
}

.nav-tabs-vertical>li>a {
    line-height: 1.428571429;
    border: 1px solid transparent;
    border-radius: 4px 0 0 4px;
}

.badge { background: #F2756A; }

#nav-menu{
    position: fixed;
    top: 45px;
    right: 45px;
    z-index: 2000;
}
#nav-menu .dropdown-menu {
    left: inherit;
    right: 0px;
}

ul.dropdown-menu>li>a>i.fa {
    width: 1.3em;
}

